--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,8 @@
-sliders=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B
-screen=[BLOCK_LIGHT] [SKY_LIGHT]
+sliders=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SHADOW_BIAS
+
+screen=[LIGHT_COLORS] [SHADOWS]
+screen.LIGHT_COLORS=[BLOCK_LIGHT] [SKY_LIGHT] 
+
 screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS 
 screen.SKY_LIGHT=SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B
+screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS
