add shadow softness
- Slightly changed how shadows are processed to allow for simple PCF.
- Added a simple PCF implementation and a shadow softness toggle to settings.

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -5,4 +5,4 @@ screen.LIGHT_COLORS=[BLOCK_LIGHT] [SKY_LIGHT]
 
 screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS 
 screen.SKY_LIGHT=SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B
-screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS
+screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS
