profiles + better shadow softening
- Added settings profiles.
- Improved PCF implementation.

Not too sure about the full affect on performance.

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,8 +1,14 @@
 sliders=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SHADOW_BIAS
 
-screen=[LIGHT_COLORS] [SHADOWS]
+screen=<profile> [LIGHT_COLORS] [SHADOWS]
 screen.LIGHT_COLORS=[BLOCK_LIGHT] [SKY_LIGHT] 
 
 screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS 
 screen.SKY_LIGHT=SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B
 screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS
+
+profile.POTATO=SHADOWS_ENABLED:0
+profile.LOW=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:0 shadowMapResolution:256
+profile.MEDIUM=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:0 shadowMapResolution:1024
+profile.HIGH=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:1 shadowMapResolution:1024
+profile.VERY_HIGH=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:1 shadowMapResolution:2048
