--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -7,8 +7,8 @@ screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B B
 screen.SKY_LIGHT=SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B
 screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS
 
-profile.POTATO=SHADOWS_ENABLED:0
-profile.LOW=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:0 shadowMapResolution:256
-profile.MEDIUM=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:0 shadowMapResolution:1024
-profile.HIGH=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:1 shadowMapResolution:1024
-profile.VERY_HIGH=SHADOWS_ENABLED:1 SOFTEN_SHADOWS:1 shadowMapResolution:2048
+profile.POTATO=SHADOWS_ENABLED:false
+profile.LOW=SHADOWS_ENABLED SOFTEN_SHADOWS:0 shadowMapResolution:256
+profile.MEDIUM=SHADOWS_ENABLED SOFTEN_SHADOWS:1 shadowMapResolution:1024
+profile.HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:2 shadowMapResolution:1024
+profile.VERY_HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:2 shadowMapResolution:2048
