--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,14 +1,14 @@
 sliders=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SHADOW_BIAS AMBIENT
 
-screen=<profile> [LIGHT_COLORS] [SHADOWS]
+screen=<profile> [LIGHT_COLORS] [SHADOWS] FXAA
 screen.LIGHT_COLORS=[BLOCK_LIGHT] [SKY_LIGHT] 
 
 screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS 
 screen.SKY_LIGHT=SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B AMBIENT
 screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS
 
-profile.POTATO=SHADOWS_ENABLED:false
-profile.LOW=SHADOWS_ENABLED SOFTEN_SHADOWS:0 shadowMapResolution:256
-profile.MEDIUM=SHADOWS_ENABLED SOFTEN_SHADOWS:2 shadowMapResolution:1024
-profile.HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:1024
-profile.VERY_HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:2048
+profile.POTATO=SHADOWS_ENABLED:false FXAA:false
+profile.LOW=SHADOWS_ENABLED SOFTEN_SHADOWS:0 shadowMapResolution:256 FXAA:false
+profile.MEDIUM=SHADOWS_ENABLED SOFTEN_SHADOWS:2 shadowMapResolution:1024 FXAA
+profile.HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:1024 FXAA 
+profile.VERY_HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:2048 FXAA
