--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,14 +1,16 @@
-sliders=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SHADOW_BIAS AMBIENT
-
+sliders=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SHADOW_BIAS SKY_LIGHT_BRIGHTNESS AMBIENT  SHADOW_BRIGHTNESS SHADOW_DISTORT_FACTOR SUN_LIGHT_COLOR_R SUN_LIGHT_COLOR_G SUN_LIGHT_COLOR_B SUN_LIGHT_BRIGHTNESS
 screen=<profile> [LIGHT_COLORS] [SHADOWS] FXAA
-screen.LIGHT_COLORS=[BLOCK_LIGHT] [SKY_LIGHT] 
+screen.LIGHT_COLORS=[BLOCK_LIGHT] [SKY_LIGHT] [SUN_LIGHT] AMBIENT
 
 screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B BLOCK_LIGHT_BRIGHTNESS 
-screen.SKY_LIGHT=SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B AMBIENT
-screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS
+screen.SKY_LIGHT=CUSTOM_SKY_COLOR SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SKY_LIGHT_BRIGHTNESS
+screen.SUN_LIGHT=SUN_LIGHT_COLOR_R SUN_LIGHT_COLOR_G SUN_LIGHT_COLOR_B SUN_LIGHT_BRIGHTNESS
+screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS SHADOW_BRIGHTNESS SHADOW_DISTORT_FACTOR
 
 profile.POTATO=SHADOWS_ENABLED:false FXAA:false
 profile.LOW=SHADOWS_ENABLED SOFTEN_SHADOWS:0 shadowMapResolution:256 FXAA:false
 profile.MEDIUM=SHADOWS_ENABLED SOFTEN_SHADOWS:2 shadowMapResolution:1024 FXAA
 profile.HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:1024 FXAA 
 profile.VERY_HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:2048 FXAA
+
+underwaterOverlay=true
