--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,7 +1,6 @@
 #if MC_VERSION > 11300
-
-block.10002=minecraft:glass minecraft:firefly_bush minecraft:oak_sapling minecraft:spruce_sapling minecraft:bush minecraft:short_grass minecraft:birch_sapling minecraft:jungle_sapling minecraft:acacia_sapling minecraft:dark_oak_sapling minecraft:grass minecraft:fern minecraft:dandelion minecraft:poppy minecraft:blue_orchid minecraft:allium minecraft:azure_bluet minecraft:red_tulip minecraft:orange_tulip minecraft:white_tulip minecraft:pink_tulip minecraft:oxeye_daisy minecraft:cornflower minecraft:lily_of_the_valley minecraft:wither_rose minecraft:brown_mushroom minecraft:red_mushroom minecraft:sunflower minecraft:lilac minecraft:rose_bush minecraft:peony minecraft:tall_grass minecraft:large_fern minecraft:wheat minecraft:potatoes minecraft:carrots minecraft:beetroots minecraft:dead_bush minecraft:sugar_cane minecraft:cobweb minecraft:fire
-block.10001=minecraft:spruce_leaves minecraft:oak_leaves minecraft:birch_leaves
+block.10000=minecraft:lava minecraft:flowing_lava minecraft:fire minecraft:soul_fire
+block.10002= minecraft:firefly_bush minecraft:oak_sapling minecraft:spruce_sapling minecraft:bush minecraft:short_grass minecraft:birch_sapling minecraft:jungle_sapling minecraft:acacia_sapling minecraft:dark_oak_sapling minecraft:grass minecraft:fern minecraft:dandelion minecraft:poppy minecraft:blue_orchid minecraft:allium minecraft:azure_bluet minecraft:red_tulip minecraft:orange_tulip minecraft:white_tulip minecraft:pink_tulip minecraft:oxeye_daisy minecraft:cornflower minecraft:lily_of_the_valley minecraft:wither_rose minecraft:brown_mushroom minecraft:red_mushroom minecraft:sunflower minecraft:lilac minecraft:rose_bush minecraft:peony minecraft:tall_grass minecraft:large_fern minecraft:wheat minecraft:potatoes minecraft:carrots minecraft:beetroots minecraft:dead_bush minecraft:sugar_cane minecraft:cobweb minecraft:fire
 
 #else
 
