--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -6,13 +6,13 @@ screen.BLOCK_LIGHT=BLOCK_LIGHT_COLOR_R BLOCK_LIGHT_COLOR_G BLOCK_LIGHT_COLOR_B B
 screen.SKY_LIGHT=CUSTOM_SKY_COLOR SKY_LIGHT_COLOR_R SKY_LIGHT_COLOR_G SKY_LIGHT_COLOR_B SKY_LIGHT_BRIGHTNESS
 screen.SUN_LIGHT=SUN_LIGHT_COLOR_R SUN_LIGHT_COLOR_G SUN_LIGHT_COLOR_B SUN_LIGHT_BRIGHTNESS
 
-screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS SOFTEN_SHADOWS SHADOW_BRIGHTNESS SHADOW_DISTORT_FACTOR
+screen.SHADOWS=SHADOWS_ENABLED shadowMapResolution SHADOW_BIAS PCF SHADOW_BRIGHTNESS SHADOW_DISTORT_FACTOR
 screen.SKY=USE_FOG_COLOR_FOR_SKY SOLID_COLOR_CLOUDS
 
-profile.POTATO=SHADOWS_ENABLED:false FXAA:false
-profile.LOW=SHADOWS_ENABLED SOFTEN_SHADOWS:0 shadowMapResolution:256 FXAA:false
-profile.MEDIUM=SHADOWS_ENABLED SOFTEN_SHADOWS:2 shadowMapResolution:1024 FXAA
-profile.HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:1024 FXAA 
-profile.VERY_HIGH=SHADOWS_ENABLED SOFTEN_SHADOWS:3 shadowMapResolution:2048 FXAA
+profile.POTATO=SHADOWS_ENABLED:false PCF:false FXAA:false
+profile.LOW=SHADOWS_ENABLED shadowMapResolution:256 FXAA:false
+profile.MEDIUM=SHADOWS_ENABLED PCF shadowMapResolution:256 FXAA:false
+profile.HIGH=SHADOWS_ENABLED PCF shadowMapResolution:1024 FXAA 
+profile.VERY_HIGH=SHADOWS_ENABLED PCF shadowMapResolution:2048 FXAA
 
 underwaterOverlay=true
